; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/media/video/cx231xx/extr_cx231xx-417.c_cx231xx_bulk_copy.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/media/video/cx231xx/extr_cx231xx-417.c_cx231xx_bulk_copy.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cx231xx = type { i32 }
%struct.urb = type { i8*, i32, %struct.cx231xx_dmaqueue* }
%struct.cx231xx_dmaqueue = type { i8* }

@GFP_ATOMIC = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.cx231xx*, %struct.urb*)* @cx231xx_bulk_copy to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @cx231xx_bulk_copy(%struct.cx231xx* %0, %struct.urb* %1) #0 {
  %3 = alloca %struct.cx231xx*, align 8
  %4 = alloca %struct.urb*, align 8
  %5 = alloca %struct.cx231xx_dmaqueue*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  store %struct.cx231xx* %0, %struct.cx231xx** %3, align 8
  store %struct.urb* %1, %struct.urb** %4, align 8
  %9 = load %struct.urb*, %struct.urb** %4, align 8
  %10 = getelementptr inbounds %struct.urb, %struct.urb* %9, i32 0, i32 2
  %11 = load %struct.cx231xx_dmaqueue*, %struct.cx231xx_dmaqueue** %10, align 8
  store %struct.cx231xx_dmaqueue* %11, %struct.cx231xx_dmaqueue** %5, align 8
  store i32 0, i32* %8, align 4
  %12 = load %struct.urb*, %struct.urb** %4, align 8
  %13 = getelementptr inbounds %struct.urb, %struct.urb* %12, i32 0, i32 0
  %14 = load i8*, i8** %13, align 8
  store i8* %14, i8** %6, align 8
  %15 = load %struct.urb*, %struct.urb** %4, align 8
  %16 = getelementptr inbounds %struct.urb, %struct.urb* %15, i32 0, i32 1
  %17 = load i32, i32* %16, align 8
  store i32 %17, i32* %8, align 4
  %18 = load i32, i32* %8, align 4
  %19 = load i32, i32* @GFP_ATOMIC, align 4
  %20 = call i8* @kmalloc(i32 %18, i32 %19)
  store i8* %20, i8** %7, align 8
  %21 = load i8*, i8** %7, align 8
  %22 = load %struct.cx231xx_dmaqueue*, %struct.cx231xx_dmaqueue** %5, align 8
  %23 = getelementptr inbounds %struct.cx231xx_dmaqueue, %struct.cx231xx_dmaqueue* %22, i32 0, i32 0
  %24 = load i8*, i8** %23, align 8
  %25 = call i32 @memcpy(i8* %21, i8* %24, i32 3)
  %26 = load i8*, i8** %7, align 8
  %27 = getelementptr inbounds i8, i8* %26, i64 3
  %28 = load i8*, i8** %6, align 8
  %29 = load i32, i32* %8, align 4
  %30 = sub nsw i32 %29, 3
  %31 = call i32 @memcpy(i8* %27, i8* %28, i32 %30)
  %32 = load %struct.cx231xx_dmaqueue*, %struct.cx231xx_dmaqueue** %5, align 8
  %33 = getelementptr inbounds %struct.cx231xx_dmaqueue, %struct.cx231xx_dmaqueue* %32, i32 0, i32 0
  %34 = load i8*, i8** %33, align 8
  %35 = load i8*, i8** %6, align 8
  %36 = load i32, i32* %8, align 4
  %37 = sext i32 %36 to i64
  %38 = getelementptr inbounds i8, i8* %35, i64 %37
  %39 = getelementptr inbounds i8, i8* %38, i64 -3
  %40 = call i32 @memcpy(i8* %34, i8* %39, i32 3)
  %41 = load i8*, i8** %7, align 8
  store i8* %41, i8** %6, align 8
  %42 = load i8*, i8** %6, align 8
  %43 = load i32, i32* %8, align 4
  %44 = load %struct.urb*, %struct.urb** %4, align 8
  %45 = load %struct.cx231xx_dmaqueue*, %struct.cx231xx_dmaqueue** %5, align 8
  %46 = call i32 @buffer_filled(i8* %42, i32 %43, %struct.urb* %44, %struct.cx231xx_dmaqueue* %45)
  %47 = load i8*, i8** %7, align 8
  %48 = call i32 @kfree(i8* %47)
  ret i32 0
}

declare dso_local i8* @kmalloc(i32, i32) #1

declare dso_local i32 @memcpy(i8*, i8*, i32) #1

declare dso_local i32 @buffer_filled(i8*, i32, %struct.urb*, %struct.cx231xx_dmaqueue*) #1

declare dso_local i32 @kfree(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
